demo-app/templates/istio-ingressgateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    istio: ingress # use Istio's default ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demo-app.mario.com"
  - port: 
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argo-demo.mario.com"
    tls:
      mode: SIMPLE
      credentialName: istio-ca-secret
      
      # serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      # privateKey: /etc/istio/ingressgateway-certs/tls.key
