demo-app/templates/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argoapp-virtualservice
spec:
  gateways: 
    - demo-app-gateway
  hosts:
    - argo-demo.mario.com
  http:
  - timeout: 5s
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
